@@ -4,7 +4,8 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added a method to add metadata in catalog.
+  [thomasdesvenain]
 
 
 1.1.3 (2013-08-27)
